packages/nicolium/src/styles/new/components.scss
/* ... */
.⁂-column {
  position: relative;

  &__header {
    &__action {
      display: flex;
      flex-grow: 1;
      justify-content: end;
    }
  }

  &[column-type='transparent'] {
    .⁂-column__header {
      padding: 1rem;

      .dark.black & {
        padding: 1rem;
      }

      @media (min-width: variables.$breakpoint-sm) {
        padding: 0;
        padding-bottom: 1rem;
      }
    }
  }

  &[column-type='filled'] {
    .⁂-column__header {
      position: sticky;
      z-index: 10;
      top: 0;

      margin-top: -1rem;
      margin-right: -1rem;
      margin-left: -1rem;
      padding: 1rem;
      border-top-left-radius: 1.5rem;
      border-top-right-radius: 1.5rem;

      background-color: #fffe;
      backdrop-filter: blur(8px) saturate(2);

      .dark.black & {
        background-color: #000b;
      }

      .dark & {
        background-color: rgb(var(--color-primary-900) / 0.9);
      }

      &--scrolled {
        border-top-left-radius: 0;
        border-top-right-radius: 0;
      }
    }

    &.⁂-card-lg {
      .⁂-column__header {
        @media (min-width: variables.$breakpoint-sm) {
          margin: -1.5rem -1.5rem 0;
          padding: 1.5rem;
        }
      }
    }
  }
}

.window-controls-overlay .⁂-column__header {
  user-select: none;

  -webkit-app-region: drag;
}

.⁂-emoji {
  transition: transform 150ms var(--ease-default);

  &:hover {
    transform: scale(1.25);
  }
}

.⁂-alt-indicator {
  display: inline-flex;
  gap: 0.25rem;
  align-items: center;

  padding-top: 0.25rem;
  padding-right: 0.5rem;
  padding-bottom: 0.25rem;
  padding-left: 0.5rem;
  border-radius: var(--radius-sm);

  font-size: var(--text-xs);
  font-weight: 500;
  line-height: var(--leading-xs);
  color: #fff;
  text-transform: uppercase;

  background-color: rgb(var(--color-gray-900));

  svg {
    width: 1rem;
    height: 1rem;
  }
}

.⁂-tooltip {
  pointer-events: none;

  z-index: 100;

  padding: 0.375rem 0.625rem;
  border-radius: var(--radius-sm);

  font-size: var(--text-xs);
  font-weight: 500;
  line-height: var(--leading-xs);
  color: rgb(var(--color-gray-100));
  white-space: nowrap;

  background-color: rgb(var(--color-gray-800));
  box-shadow:
    0 1px 3px 0 #0001,
    0 1px 2px -1px #0001;

  .dark & {
    color: rgb(var(--color-gray-900));
    background-color: rgb(var(--color-gray-100));
  }

  &__arrow {
    fill: rgb(var(--color-gray-800));

    .dark & {
      fill: rgb(var(--color-gray-100));
    }
  }
}

.⁂-indicator {
  border-radius: var(--radius-full);
  outline-style: double;

  &--sm {
    width: 0.375rem;
    height: 0.375rem;
    box-shadow: 0 1px 2px 0 #0000000d;
  }

  &--active {
    background: var(--hex-green-500);
    outline: 2px solid var(--hex-green-400);
  }

  &--pending {
    background: var(--hex-yellow-500);
    outline: 2px solid var(--hex-yellow-400);
  }

  &--error {
    background: var(--hex-red-500);
    outline: 2px solid var(--hex-red-400);
  }

  &--inactive {
    background: var(--hex-neutral-500);
    outline: 2px solid var(--hex-neutral-400);
  }
}

.⁂-tag {
  display: inline-flex;
  align-items: center;

  padding: 0.25rem;
  border-radius: var(--radius-sm);

  color: white;
  white-space: nowrap;

  background-color: rgb(var(--color-primary-500));
}

.⁂-progress-bar {
  overflow: hidden;

  width: 100%;
  height: 0.625rem;
  border-radius: var(--radius-lg);

  background-color: rgb(var(--color-gray-300));

  .dark & {
    background-color: rgb(var(--color-primary-800));
  }

  &--sm {
    height: 6px;
  }

  > div {
    height: 100%;
    background-color: rgb(var(--color-secondary-500));
  }
}

.⁂-slider {
  cursor: pointer;

  position: relative;

  display: inline-flex;

  height: 1.5rem;

  transition: all 150ms var(--ease-default);

  &__track {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);

    width: 100%;
    height: 0.25rem;
    border-radius: var(--radius-full);

    background-color: rgb(var(--color-primary-200));

    .dark & {
      background-color: rgb(var(--color-primary-700));
    }
  }

  &__fill {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);

    height: 0.25rem;
    border-radius: var(--radius-full);

    background-color: rgb(var(--color-accent-500));

    transition: width 0ms ease-in-out;
  }

  &__thumb {
    position: absolute;
    z-index: 10;
    top: 50%;
    transform: translateY(-50%);

    width: 0.75rem;
    height: 0.75rem;
    margin-left: -0.375rem;
    border-radius: var(--radius-full);

    background-color: rgb(var(--color-accent-500));
    box-shadow: 0 1px 2px 0 #0001;

    transition: left 0ms ease-in-out;
  }

  &--animate {
    .⁂-slider__fill {
      transition-duration: 150ms;
    }
  }
}

.⁂-step-slider {
  cursor: pointer;

  position: relative;

  display: inline-flex;

  height: 1.5rem;

  transition: all 150ms var(--ease-default);

  &__track {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);

    width: 100%;
    height: 0.25rem;
    border-radius: var(--radius-full);

    background-color: rgb(var(--color-primary-200));

    .dark & {
      background-color: rgb(var(--color-primary-700));
    }
  }

  &__fill {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);

    height: 0.25rem;
    border-radius: var(--radius-full);

    background-color: rgb(var(--color-secondary-500));
  }

  &__step {
    position: absolute;
    z-index: 10;
    top: 50%;
    transform: translateY(-50%);

    width: 0.25rem;
    height: 0.75rem;

    background-color: rgb(var(--color-primary-500));
  }

  &__thumb {
    position: absolute;
    z-index: 10;
    top: 50%;
    transform: translateY(-50%);

    width: 0.75rem;
    height: 0.75rem;
    margin-left: -0.375rem;
    border-radius: var(--radius-full);

    background-color: rgb(var(--color-secondary-500));
    box-shadow: 0 1px 2px 0 #0001;

    transition: left 100ms ease-in-out;
  }
}
/* ... */

